src/test/ui/nll/ty-outlives/projection-implied-bounds.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/projection-implied-bounds.rs:35:18
   |
LL |     twice(value, |value_ref, item| invoke2(value_ref, item));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
